pictor (2.9) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 25 Sep 2010 11:38:23 -0700

pictor (2.8-0ubuntu1) maverick; urgency=low

  * debian/install, pictor-unload, pictor-unload.1: add a script that
    helps unload files from a source media, renaming them appropriately
    and optionally unmounting the media when done
  * index.php: allow for client to override thumb columns

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 25 Sep 2010 11:38:21 -0700

pictor (2.7-0ubuntu1) maverick; urgency=low

  * index.php: drop the unecessary title at the top
  * camera.png, debian/copyright, debian/install, favicon.ico, index.php,
    next.png, prev.png: add a favicon, next and previous buttons, update
    copyright to add famfamfam

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 24 Aug 2010 15:28:58 -0400

pictor (2.6-0ubuntu1) lucid; urgency=low

  * index.php: scale images to bestfit=true

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 15 Feb 2010 19:37:24 -0600

pictor (2.5-0ubuntu1) lucid; urgency=low

  * index.php: use exif data to determine if image, catch imagick exceptions

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 10 Feb 2010 11:46:06 -0600

pictor (2.4-0ubuntu1) lucid; urgency=low

  * index.php: use a backward compatible scaleImage() invocation that works
    with Hardy's php

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 09 Feb 2010 11:40:42 -0600

pictor (2.3-0ubuntu1) lucid; urgency=low

  * index.php: center license text

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Feb 2010 20:08:54 -0600

pictor (2.2-0ubuntu1) lucid; urgency=low

  * rebuild using better tools, and prepare for PPA uploads backported to
    older Ubuntu releases
  * debian/rules: drop get-orig-source, no longer needed, handled by my
    own scripts

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Feb 2010 19:09:33 -0600

pictor (2.1) lucid; urgency=low

  * debian/apache.conf: turn off indexes
  * index.php:
    - quote href's